Java version decreased to 11-th